# luismayta.github.io

./: .babelrc  .bumplus.toml  .editorconfig  .env.example  .envrc  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .mailmap  .pre-commit-config.yaml  .projectile  .sops.yaml  .tmuxinator.yml  .todocheck.yaml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CNAME  CONTRIBUTING.rst  Makefile  Pipfile  README.md  README.rst  RELEASING.rst  SECURITY.md  Taskfile.yml  config.toml  docker-compose.yml  gatsby-config.js  gatsby-node.js  index.html  index.xml  mkdocs.yml  package.json  pubspec.yaml  requirements.txt  setup.cfg  sonar-project.properties  tsconfig.json  (+1 more)
.chglog/: config.yml
.ci/linters/: .gitleaks.toml  .prettierignore  markdown-link-config.json
.github/: FUNDING.yml
.github/linters/: .gitleaks.toml  .prettierignore
.github/workflows/: cd.yml  hugo.yml  lint.yml  push.yml  release.yml
categories/: index.xml
content/: about.md
content/works/: spring.md
css/: highlight.css  styles.css  styles.scss
data/: config.json  config.toml  education.json  education.toml  experience.json  experience.toml  forms.toml  projects.toml  recentworks.yaml  services.toml  sidebar.json  sidebar.toml  skills.json  skills.toml  social.json  social.toml
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  faq.md  index.md  releasing.md  roadmap.md  support.md  testing.md  troubleshooting.md
docs/contribute/: git-flow.md
docs/examples/: common.md
docs/include/: terraform.md
docs/source/: CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst  TROUBLESHOOTING.rst
etc/tmuxinator/: luismayta.github.io.yml
extras/make/: hugo.mk  test.mk  utils.mk
js/: main.js
layouts/: index.html
layouts/_default/: single.html
layouts/partials/: contact.html  footer-scripts.html  footer.html  header.html  projects.html  recentworks.html  services.html  sidebar.html  skills.html  subheader.html
lib/constants/: strings.dart
lib/ui/: home.dart
requirements/: dev.txt  setup.txt  test.txt
script/: bootstrap.sh  generate.sh  setup.sh  watch.sh
tags/: index.xml
web/: index.html
(+61 files in other folders)
