# All configuration for plugins and other utils is defined here.
# Read more about `setup.cfg`:
# https://docs.python.org/3/distutils/configfile.html

[bumpversion]
files = VERSION README.rst provision/docker-compose/dev.yml provision/docker-compose/test.yml
commit = False
tag = False
current_version = 0.0.0

[bumpversion:file:provision/docker-compose/dev.yml]
search = {current_version}
replace = {new_version}

[bumpversion:file:provision/docker-compose/test.yml]
search = {current_version}
replace = {new_version}

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[metadata]
description-file = README.rst

[flake8]
max-complexity = 6
statistics = True
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules
doctests = True

# Flake plugins:
inline-quotes = single
accept-encodings = utf-8

# Ignoring some error:
per-file-ignores =
  # Enable `assert` keyword and magic numbers for tests:
  tests/*.py: S101, Z432
  # Allow `print` function for hooks:
  hooks/*.py: T001
  # Disable some pydocstyle checks:
  **/*.py: D100, D104, D106, D401, X100

[pycodestyle]
max-line-length = 100
exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules

[mypy]
python_version = 3.6
check_untyped_defs = True
ignore_errors = False
ignore_missing_imports = True
strict_optional = True
warn_unused_ignores = True
warn_redundant_casts = True
warn_unused_configs = True

[wheel]
universal = 1

[tool:pytest]
testpaths = tests/

# py.test options:
console_output_style = classic
norecursedirs =  *.egg .eggs dist build docs .tox .git __pycache__
addopts =
    --cov luismayta.github.io
    --cov-report html
    --ignore docs/
    --ignore .eggs/
    --ignore .pytest_cache/
    --ignore .mypy_cache
    --ignore .egg
    -s -vv
    --doctest-modules

[isort]
multi_line_output = 3
include_trailing_comma = true
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
default_section = FIRSTPARTY
atomic=true
# Should be: 100 - 1
line_length = 99
